# CyberSuite

./: .gitignore  MANIFEST.in  Makefile  README.md  RELEASE_NOTES_v1.0.0.md  git_setup.sh  pyproject.toml  requirements.txt  run.bat  run.sh
cybersuite/: __init__.py  __main__.py  config.py  cve_online.py  cvedb.py  gui.py  model.py  netutil.py  reporting.py  runner.py  scope.py  theme.py
cybersuite/checks/: __init__.py  base.py  cve_scan.py  firewall.py  gateway_audit.py  local_host.py  network_discovery.py  port_scan.py  service_audit.py  tls_audit.py
packaging/: README.md
packaging/appimage/: AppRun  build-appimage.sh
packaging/deb/: build-deb.sh
packaging/deb/debian/: changelog  control  copyright  cybersuite.install  rules
packaging/linux/: cybersuite.desktop
packaging/rpm/: build-rpm.sh  cybersuite.spec
